dashboard and dynamic lesson routes

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^10.5.2"
+		"@types/uuid": "^9.0.6",
+		"firebase": "^10.5.2",
+		"uuid": "^9.0.1"
 	}
 }
